--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
             <version>2.6.5</version>
         </dependency>
 
+        <!--HBase-->
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-client -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+
 
     </dependencies>
 
